--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,22 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --page-bg-image: url("../images/cover-image-dark.png");
+  --page-bg-color: #000028;
+  --accent-bg-color: #FF0070;
+  --accent-text-color: #000028;
+  --accent-font-style: bold;
+  --accent-font-weight: 700;
+  --accent-font-size: 1.125rem;
+  --neon-title-text-color: #DB00FF;
+  --main-text-color: #F1B2CE;
+  --main-font-style: Regular;
+  --main-font-weight: 400;
+  --main-font-family: "IBM Plex Mono";
+  --main-font-size: 1.125rem;
+  --title-text-color: #FF0070;
+  --link-color: #F1B2CE;
+  --decorated-zone-color: #FF0070;
+  --header__theme-menu-button-hover-color: #FF007066;
+  --header__theme-menu-button-focus-color: #FF0070;
 }
