Исправление ошибки Проект Сложно сосредоточиться

--- a/styles/style.css
+++ b/styles/style.css
@@ -303,7 +303,7 @@
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     margin-block-start: 10.188rem;
-    margin-inline-start: -1.375rem; /* Отрицательный марджин 22px, чтобы подвинуть заголовок к левому краю */
+    margin-inline-start: -1.25rem; /* Отрицательный марджин, чтобы подвинуть заголовок к левому краю */
   }
 
   .header__description {
