--- a/styles/light.css
+++ b/styles/light.css
@@ -13,15 +13,8 @@
   --page-bg-color: #FFC2E6;
   --accent-bg-color: #FF8DCB;
   --accent-text-color: #353430;
-  --accent-font-style: bold;
-  --accent-font-weight: 700;
-  --accent-font-size: 1.125rem;
   --neon-title-text-color: #FFC2E6;
   --main-text-color: #353430;
-  --main-font-style: Regular;
-  --main-font-weight: 400;
-  --main-font-family: "IBM Plex Mono";
-  --main-font-size: 1.125rem;
   --title-text-color: #353430;
   --link-color: #353430;
   --decorated-zone-color: #353430;
@@ -39,15 +32,8 @@
   --page-bg-color: #FFC2E6;
   --accent-bg-color: #FF8DCB;
   --accent-text-color: #353430;
-  --accent-font-style: bold;
-  --accent-font-weight: 700;
-  --accent-font-size: 1.125rem;
   --neon-title-text-color: #FFC2E6;
   --main-text-color: #353430;
-  --main-font-style: Regular;
-  --main-font-weight: 400;
-  --main-font-family: "IBM Plex Mono";
-  --main-font-size: 1.125rem;
   --title-text-color: #353430;
   --link-color: #353430;
   --decorated-zone-color: #353430;
@@ -55,7 +41,7 @@
   --header__theme-menu-button-focus-color: #353430;
   }
 
-  .theme-light .header__rec {
+   :root:not(.theme-dark) .header__rec {
     display: none;
   }
 }
