--- a/styles/style.css
+++ b/styles/style.css
@@ -18,22 +18,18 @@
   font-size: var(--accent-font-size);
   font-weight: var(--accent-font-weight);
   font-style: var(--accent-font-style);
-  font-family: var(--main-font-family, sans-serif);
+  font-family: var(--main-font-family);
 }
 
 .decorated-zone {
   position: relative;
 }
 
-.decorated-zone::before,
-.decorated-zone::after {
+.decorated-zone::before {
   content: "";
   position: absolute;
   inline-size: 25px;
   block-size: 25px;
-}
-
-.decorated-zone::before {
   inset-block-start: 10px;
   inset-inline-end: 10px;
   border-block-start: 1px solid var(--decorated-zone-color);
@@ -41,6 +37,10 @@
 }
 
 .decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
   inset-block-end: 10px;
   inset-inline-start: 10px;
   border-block-end: 1px solid var(--decorated-zone-color);
@@ -65,10 +65,9 @@
   inset-block-start: 11px;
   inset-inline-end: 19px;
   color: var(--title-text-color);
-  font-style: var(--main-font-style);
   font-size: var(--main-font-size);
   font-weight: var(--main-font-weight);
-  font-family: var(--main-font-family, sans-serif);
+  font-family: var(--main-font-family);
 }
 
 .header__rec::after {
@@ -79,6 +78,7 @@
   border-radius: 50%;
   background-color: var(--accent-bg-color);
   margin-inline-start: 10px;
+  box-shadow: 0 0 4px 2px var(--accent-bg-color);
 }
 
 .header__theme-menu {
@@ -101,7 +101,6 @@
   font-family: var(--main-font-family);
   font-size: var(--accent-font-size);
   font-weight: var(--main-font-weight);
-  font-style: var(--main-font-style);
   text-transform: lowercase;
   text-align: center;
   cursor: pointer;
@@ -132,7 +131,7 @@
 .neon-title {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   color: var(--neon-title-text-color);
-  font-family: var(--main-font-family, sans-serif);
+  font-family: var(--main-font-family);
   font-weight: var(--accent-font-weight);
   font-style: var(--accent-font-style);
   text-shadow: 4px 4px 0 var(--accent-bg-color);
@@ -163,7 +162,7 @@
 .section__title {
   margin-block-end: 1.25rem;
   color: var(--title-text-color);
-  font-family: var(--main-font-family, sans-serif);
+  font-family: var(--main-font-family);
   font-size: var(--accent-font-size);
   font-weight: var(--accent-font-weight);
   font-style: var(--accent-font-style);
@@ -174,10 +173,9 @@
 
 .card {
   color: var(--main-text-color);
-  font-family: var(--main-font-family, sans-serif);
+  font-family: var(--main-font-family);
   font-weight: var(--main-font-weight);
   font-size: var(--main-font-size);
-  font-style: var(--main-font-style);
   line-height: 1.3;
 }
 
@@ -206,7 +204,7 @@
   margin-block-start: 3.125rem;
 }
 
-.section_advice .card__title {
+.section_advice .section__subtitle {
   margin-block-end: 1.25rem;
 }
 
@@ -369,30 +367,30 @@
     margin-block-start: 1.25rem;
   }
 
+  .section_gallery .section__content .gallery__img:nth-child(1) {
+    grid-area: sunset;
+  }
+
+  .section_gallery .section__content .gallery__img:nth-child(2) {
+    grid-area: ice;
+  }
+
+  .section_gallery .section__content .gallery__img:nth-child(3) {
+    grid-area: tape;
+  }
+
+  .section_gallery .section__content .gallery__img:nth-child(4) {
+    grid-area: books;
+  }
+
+  .section_gallery .section__content .gallery__img:nth-child(5) {
+    grid-area: street;
+  }
+
   .gallery__img {
     inline-size: 100%;
     block-size: 100%;
     object-fit: cover;
-  }
-
-  .gallery__img_sunset {
-    grid-area: sunset;
-  }
-
-  .gallery__img_ice {
-    grid-area: ice;
-  }
-
-  .gallery__img_tape {
-    grid-area: tape;
-  }
-
-  .gallery__img_books {
-    grid-area: books;
-  }
-
-  .gallery__img_street {
-    grid-area: street;
   }
 
   /* Футер */
